--- a/docs/pages/quickstart/unified-balance.mdx
+++ b/docs/pages/quickstart/unified-balance.mdx
@@ -46,7 +46,7 @@ const usdcMapping = createTokenMapping([
 ]);
 ```
 
-::: warning Note
+:::warning 
 Always verify token addresses before using them in your application, especially for newer or less established networks.
 :::
 
@@ -72,19 +72,12 @@ Now we're ready to use the `getUnifiedBalance` function to fetch the unified USD
 
 ```typescript
 async function fetchUnifiedUSDCBalance(address: `0x${string}`) {
-  try {
-    const result = await getUnifiedBalance({
-      mapping: usdcMapping,
-      address,
-      clients,
-    });
-
-    console.log(`Unified USDC Balance: ${result.amount} (${result.decimals} decimals)`);
-    return result;
-  } catch (error) {
-    console.error('Error fetching unified USDC balance:', error);
-    throw error;
-  }
+  const result = await getUnifiedBalance({
+    mapping: usdcMapping,
+    address,
+    clients,
+  });
+  return result;  
 }
 
 // Usage
