--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -10,7 +10,7 @@ import { HomePage } from 'vocs/components'
   <HomePage.InstallPackage name="klaster-sdk" type="install" />
   <HomePage.Description>Klaster enables developers to build chain abstracted flows and apps.</HomePage.Description>
   <HomePage.Buttons>
-    <HomePage.Button href="/getting-started" variant="accent">Get started</HomePage.Button>
+    <HomePage.Button href="/zero-to-hero-klaster-guide" variant="accent">Get started</HomePage.Button>
     <HomePage.Button href="https://github.com/0xPolycode/">GitHub</HomePage.Button>
   </HomePage.Buttons>
 
