fixed iframe bug with setting true for non-boolean params

--- a/docs/pages/zero-to-hero-klaster-guide.mdx
+++ b/docs/pages/zero-to-hero-klaster-guide.mdx
@@ -8,7 +8,7 @@ the development of chain abstracted apps and flows.
 In this tutorial, you will get all the required steps to build a chain abstracted application. If you're interested in what
 a chain abstracted application looks like, check out our video on AbstraktAAVE - a chain abstracted implementation of AAVE.
 
-<iframe width="640" height="416" src="https://www.loom.com/embed/e226679dc2c2494bbbf4e880937e3037?sid=ab3b4aae-5cb6-4d85-af70-4ac240c9e296" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<iframe width="640" height="416" src="https://www.loom.com/embed/e226679dc2c2494bbbf4e880937e3037?sid=ab3b4aae-5cb6-4d85-af70-4ac240c9e296" frameborder="0"></iframe>
 
 You can also use the app yourself at:
 
