--- a/docs/pages/getting-started.mdx
+++ b/docs/pages/getting-started.mdx
@@ -105,9 +105,9 @@ function on the SDK.
 
 ### Tracking the progress of the transaction
 
-In order to track the progress of your executed tranaction, you can use the [Klaster Explorer](./explorer).
+In order to track the progress of your executed tranaction, you can use the [Klaster Explorer](https://explorer.klaster.io).
 
-Visit https://explorer.klaster.io or open the link in the form of
+If you wish to generate explorer links - you can form the URLs like so:
 
  `https://explorer.klaster.io/details/{iTxHash}`
 
