--- a/docs/pages/zero-to-hero-klaster-guide.mdx
+++ b/docs/pages/zero-to-hero-klaster-guide.mdx
@@ -126,7 +126,7 @@ As well as working with the Multichain RPC provider, the Klaster SDK works best 
 objects. These objects represent mappings of tokens you consider _equivalent_ across various blockchains. One example would
 be _USDC_ - which is widely deployed by Circle across multiple blockchains.
 
-You can use the Circle [Token Deployments]('https://www.circle.com/en/multi-chain-usdc') to see which address the canonical
+You can use the Circle [Token Deployments](https://www.circle.com/en/multi-chain-usdc) to see which address the canonical
 version of which token is deployed to.
 
 However, nothing limits you to using only offical token deployments. If you consider the `axlUSDC` to be equivalent to cannonical
@@ -181,7 +181,7 @@ Klaster introduces a concept of _Bridging Plugigs_. Yoa can think of them as tem
 uses to encode and execute a bridging action whenever it needs to. Since Klaster is an agnostic protocol and SDK,
 every function that might require bridging can accept the function of type `BridgePlugin` as input.
 
-For this tutorial we have prepared a [LiFi]('https://li.fi') bridging plugin example.
+For this tutorial we have prepared a [LiFi](https://li.fi) bridging plugin example.
 
 But in general, what is a Klaster Bridging Plugin?
 
