Function name changed to loadBiconomyV2Account

--- a/docs/pages/accounts/biconomy.mdx
+++ b/docs/pages/accounts/biconomy.mdx
@@ -4,7 +4,7 @@ To initialize a Biconomy account, you use the following function
 
 ```ts
 const klaster = await initKlaster({
-  accountInitData: loadBicoV2Account({
+  accountInitData: loadBiconomyV2Account({
     owner: '0xEOA_OWNER',
   }),
   nodeUrl: 'https://node-url',
